--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,205 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
+}
+body {
+	background: #141414;
+	color: #ffffff;
+	font-family: "Poppins", sans-serif;	
+	max-width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+@media (min-width: 576px) {
+	body { max-width: 540px; }
+}
+@media (min-width: 768px) {
+	body { max-width: 720px; }
+}
+@media (min-width: 992px) {
+	body { max-width: 960px; }
+}
+@media (min-width: 1200px) {
+	body { max-width: 1140px; }
+}
+.heading {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 1rem 0 2rem;
+}
+.heading img, .movie .heading img {
+	width: 100px;
+}
+@media (max-width: 576px) {
+	.heading {
+		display: block;
+	}
+	.heading img, .movie .heading img {
+		width: 80px;
+	}
+}
+input {
+	padding: 0.75rem;
+	min-width: 280px;
+	border: none;
+	outline: none;
+	border-radius: 6px;
+}
+input::placeholder {
+	font-size: 14px;
+	color: #666666;
+}
+@media (max-width: 576px) {
+	input {
+		width: 100%;
+	}
+}
+.movies h2, .favourites h2 {
+	font-size: 1.5rem;
+	font-weight: 500;
+	letter-spacing: 1px;
+	color: lightgray;	
+	margin-bottom: 2rem;
+}
+.favourites {
+	margin-top: 3rem;
+}
+.row {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 3rem 2rem;
+}
+.movies .img-container {
+	overflow: hidden;
+}
+.movies img {
+	width: 100%;
+	transition: transform 400ms;
+	vertical-align: middle;
+}
+.movies img:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+}
+.movies .link {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: #0a0a0a;
+	width: 100%;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
+}
+.movies .link a {
+	text-decoration: none;
+	color: lightgray;
+	font-size: 1rem;
+	padding-right: 	1.5rem;
+}
+.movies .link a:hover, .movie .home-link a:hover {
+	color: cyan;
+}
+.movies .add, .movies .remove {
+	padding-right: 1rem;
+}
+.movies .remove-btn {
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: red;
+}
+.movies .remove-btn:hover {
+	cursor: pointer;
+}
+@media (max-width: 768px) {
+	.row {
+		grid-template-columns: auto auto;
+	}
+}
+@media (max-width: 600px) {
+	.row {
+		grid-template-columns: auto;
+	}
+}
+.movie {
+	max-width: 800px;
+	margin: 0 auto;
+}
+.movie .home-link a {
+	text-decoration: none;
+	font-size: 18px;
+	color: lightgray;
+}
+.movie .row {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-gap: 3rem 2rem;
+}
+.movie .img, .movie .desc {
+	flex: 50%;
+}
+.movie img{
+	width: 100%;
+}
+.movie .title {
+	font-size: 2.5rem;
+}
+.movie .info p {
+	color: lightgray;
+}
+.movie .info .inner-text {
+	font-size: 14px;
+	color: cyan;
+}
+.movie .plot {
+	margin-top: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
+@keyframes spinner {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
+}
+.spinner-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 8rem;	
+}
+.loading-spinner {
+	width: 100px;
+	height: 100px;
+	border: 10px solid cyan;
+	border-top: 10px solid darkgray;
+	border-radius: 50%;
+	animation: spinner 1.5s linear infinite;
+}
+.error {
+	font-size: 1.5rem;
+	color: #f65573;
+	text-align: center;
+}
+footer {
+  padding: 2rem 0; 
+}
+footer p {
+  color: gray;
+  text-align: center; 
+  margin-bottom: 0; 
+}
+footer p span {
+  color: cyan;
+  font-weight: 500; 
 }
